%% Trainee template — replace placeholders and extend with your tables/relationships.
%% Tip: erDiagram syntax: ENTITY ||--o{ OTHER : relationship_label

erDiagram
    CUSTOMER {
        int id PK
        string email UK
        string phone
    }

    ADDRESS {
        int id PK
        int customer_id FK
        string street
        string city
        string state
        string zip
        string label
    }

    PRODUCT {
        int id PK
        string sku UK
        string name
        decimal price
        int stock_on_hand
    }

    ORDER_HEADER {
        int id PK
        int customer_id FK
        int address_id FK
        date order_date
        string status
    }

    ORDER_LINE {
        int id PK
        int order_id FK
        int product_id FK
        int quantity
        decimal unit_price
    }

    CUSTOMER ||--o{ ADDRESS : has
    CUSTOMER ||--o{ ORDER_HEADER : places
    ADDRESS ||--o{ ORDER_HEADER : ships_to
    ORDER_HEADER ||--|{ ORDER_LINE : contains
    PRODUCT ||--o{ ORDER_LINE : referenced_by
